# RV2FollowMe_v1.0

./: README.md
Assets/newbulldog_description/bulldog_description/: CMakeLists.txt  package.xml
Assets/newbulldog_description/bulldog_description/launch/: bullbot_laser_nav_gazebo.launch  teleop.launch  test_display.launch
Assets/newbulldog_description/bulldog_description/meshes/: base_link.prefab  base_link_0.asset  base_link_1.asset  base_link_10.asset  base_link_11.asset  base_link_12.asset  base_link_13.asset  base_link_14.asset  base_link_15.asset  base_link_16.asset  base_link_17.asset  base_link_18.asset  base_link_19.asset  base_link_2.asset  base_link_3.asset  base_link_4.asset  base_link_5.asset  base_link_6.asset  base_link_7.asset  base_link_8.asset  base_link_9.asset  camera.prefab  camera.stl  camera_0.asset  installation_plate.stl  laser_plate.stl  motor1_link.prefab  motor1_link.stl  motor1_link_0.asset  motor1_link_1.asset  motor1_link_2.asset  motor1_link_3.asset  motor2_link.prefab  motor2_link.stl  motor2_link_0.asset  motor2_link_1.asset  motor2_link_2.asset  motor2_link_3.asset  motor3_link.prefab  motor3_link.stl  (+14 more)
Assets/newbulldog_description/bulldog_description/urdf/: bulldog_robot.xacro
Assets/newbulldog_description/bulldog_description/urdf/accessories/: plates.urdf.xacro
Assets/newbulldog_description/bulldog_description/urdf/bulldog/: bulldog.csv  bulldog.urdf  bulldog.urdf.xacro  materials.xacro  wheel.urdf.xacro
ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
(+120 files in other folders)
